# groth16-rs-coursework

./: .gitignore  Cargo.toml  README.md
coverage/: tarpaulin-report.html
doc/: crates.js  help.html  settings.html  src-files.js
doc/ark_ec/: all.html  index.html  trait.AdditiveGroup.html  trait.AffineRepr.html  trait.CurveCycle.html  trait.CurveGroup.html  trait.PairingFriendlyCycle.html  trait.PrimeGroup.html
doc/ark_ff/: all.html  index.html  macro.BigInt.html  macro.MontFp.html  macro.const_for.html  macro.impl_additive_ops_from_ref.html  macro.impl_multiplicative_ops_from_ref.html  macro.sbb.html  struct.BitIteratorBE.html  struct.BitIteratorLE.html  trait.ToConstraintField.html  trait.UniformRand.html
doc/ark_ff_asm/: all.html  index.html  macro.x86_64_asm_mul.html  macro.x86_64_asm_square.html
doc/ark_ff_macros/: all.html  attr.unroll_for_loops.html  derive.MontConfig.html  index.html  macro.to_sign_and_limbs.html
doc/ark_mnt4_753/: all.html  index.html  sidebar-items.js  struct.FqConfig.html  struct.FrConfig.html  type.Fq.html  type.Fr.html
doc/ark_mnt6_753/: all.html  index.html  sidebar-items.js  struct.Config.html  struct.Fq3Config.html  struct.Fq6Config.html  struct.FqConfig.html  struct.FrConfig.html  type.Fq.html  type.Fq3.html  type.Fq6.html  type.Fr.html  type.G1Affine.html  type.G1Prepared.html  type.G1Projective.html  type.G2Affine.html  type.G2Prepared.html  type.G2Projective.html  type.MNT6_753.html
doc/ark_poly/: all.html  index.html
src/: circuits.rs  groth16.rs  helpers.rs  lib.rs  main.rs  polynomial.rs
tests/: tests.rs
(+5015 files in other folders)
