[package]
name = "groth16"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = "*"
ark-mnt6-753 = "*"
ark-std = "*"
ark-ff = "*"
ark-serialize = { version = "*", features = ["derive"] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
itertools = "*"
rand = "0.9"

rootcause = { version = "0.10", features = ["backtrace"] }
log = "0.4.28"
env_logger = "0.11.8"